Added fragment, layout and database for conference schedule.

--- a/BICSI/res/values/strings.xml
+++ b/BICSI/res/values/strings.xml
@@ -71,6 +71,10 @@
  <string name="some_hint">
   Type here to filter by date&#8230;
  </string>
+ 
+ <string name="some_hint_confSched">
+  Type here to filter by date&#8230;
+ </string>
 	
 	
 </resources>
