Added alldata db and made necessary chnages for conf sched details which is not working correctly as yet. Hope to get it soon.

--- a/BICSI/res/values/strings.xml
+++ b/BICSI/res/values/strings.xml
@@ -73,7 +73,7 @@
  </string>
  
  <string name="some_hint_confSched">
-  Type here to filter by date&#8230;
+  Type here to filter by session name&#8230;
  </string>
 	
 	
